--- a/SimpleFinance.Application/SimpleFinance.Application.csproj
+++ b/SimpleFinance.Application/SimpleFinance.Application.csproj
@@ -12,4 +12,9 @@
     <ProjectReference Include="..\SimpleFinance.Shared\SimpleFinance.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+  </ItemGroup>
+
 </Project>
