--- a/SimpleFinance.Api/appsettings.json
+++ b/SimpleFinance.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Postgres": {
+    "ConnectionString": "Host=localhost;Database=SimpleFinance;Username=postgres;Password=postgres"
+  }
 }
