--- a/SimpleFinance.UnitTests/SimpleFinance.UnitTests.csproj
+++ b/SimpleFinance.UnitTests/SimpleFinance.UnitTests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="NSubstitute" Version="4.3.0" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
@@ -23,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SimpleFinance.Application\SimpleFinance.Application.csproj" />
     <ProjectReference Include="..\SimpleFinance.Domain\SimpleFinance.Domain.csproj" />
   </ItemGroup>
 
