--- a/SimpleFinance.Api/SimpleFinance.Api.csproj
+++ b/SimpleFinance.Api/SimpleFinance.Api.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\SimpleFinance.Shared\SimpleFinance.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
